2006-02-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/format-page.py (grab_gettext4): substitute
	@<platform>-VERSION@ for the download page. This automates version
	numbers for the download page.

	* scripts/lilypondorg.py (Module): import from GUB. 

	* site/images/proportional-fragment.png: new file

	* site/images/lily-in-inkscape.png: new file

	* site/images/haddad-poetik3.png: new file

	* site/images/bach-schenker.png:  new file

	* site/switch/new-notation.html: new file

2006-02-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: 31-2

2006-02-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: note about w98
	freebsd is .30

2006-02-02  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/sponsor/options.html: update translation
	* fr/about/pubs.html: idem

2006-01-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/pubs.html: update LJ urls.

	* site/install/devel.ihtml: announce .30 for FreeBSD too.

2006-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/sponsor/options.html (src): add note about cheques

2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/doneet.html (Module): remove. 

2006-01-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* TRANSLATION: Remove slackware, donate.

2006-01-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: 28-1
	28-2 for darwin.

2006-01-21  John Mandereau  <john.mandereau@free.fr>

	* fr/about/pubs.html: update, and typo corrections

2006-01-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/pubs.html: Updat lj entry using old-news.

2006-01-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* README: 
	* site/devel/participating/index.html: Fix cvs command.

2006-01-16    <kroeger@pedrokroeger.net>

	* site/install/stable.ihtml: fix mingw link.

2006-01-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: 2.7.27-5

2006-01-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: more explicit instructions.
