@@ -53,7 +53,7 @@ Pitch in a donation!  We suggest an amount of EUR 25.  Send it via
 <input type="hidden" name="business" value="hanwen@xs4all.nl"/>
 <input type="hidden" name="item_name" value="LilyPond donation"/>
 <input type="hidden" name="currency_code" value="EUR">
-<input type="hidden" name="item_number" value="2005"/>
+<input type="hidden" name="item_number" value="2006"/>
 <input type="image"
 src="http://images.paypal.com/images/x-click-but02.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!"/>
 </form>
@@ -65,7 +65,7 @@ src="http://images.paypal.com/images/x-click-but02.gif" name="submit" alt="Make 
 
 
 <em>Don't bother with cheques. Cashing them typically costs us about
-EUR 20</em>.
+EUR 25</em>.
 
 </div>
 
